    - parser now supports extended ASCII character set
      (up to ASCII code 255, i.e. includes now umlauts and accents)
    - filename arguments in LSCP commands now allow to use escape
      sequences, that is directly literal as one of: \', \", \\, \n, \r,
      \f, \t, \v, or as octal ASCII code value like \132, or as hex ASCII
      code value like \xf2) (fixes bug #24)

  * Bug fixes:
    - fixed crash occurring on certain LSCP scripts (Bug 39)
    - another thread safety fix for lscp "load engine" and "set
      channel audio output device"

  * test cases:
    - updated and fixed (haven't been touched in a while)

Version 0.4.0 (24 November 2006)

  * packaging changes:
    - changed deprecated copyright attribute to license; added ldconfig
      to post-(un)install steps; added devel package for liblinuxsampler;
      to linuxsampler.spec (RPM)
    - install necessary development header files for allowing 3rd party
      applications to link against liblinuxsampler
    - liblinuxsampler's API documentation can be generated with 'make docs'
      (Doxygen required)
    - added benchmark to automatically detect the best triangle LFO
      implementation (currently either an integer math solution or a
      di-harmonic approximation), automatic detection can be overriden
      with --enable-signed-triang-algo=x and --enable-unsigned-triang-algo=x
      configure script argument though (mandatory for cross-compilation)
    - do not automatically pick optimized gcc flags if the user already
      provided some on his own (as CXXFLAGS)
    - added compile time option to disable processing of All-Notes-Off MIDI
      messages
    - added compile time options to allow disabling the various audio and
      MIDI drivers
    - fixed automatic GCC CPU switch detection on PPC
      (patch by Ebrahim Mayat)

  * Gigasampler format engine:
    - extensive synthesis optimization
      (reimplementation of EGs and LFO(s), removed synthesis parameter